--- a/first.html
+++ b/first.html
@@ -20,7 +20,7 @@
                 </div>
     
                  <div class="validateInput" id="checkPh">
-                  <input type="text" value="IN"  class="country_code" id="country_code" />
+                  <input type="text"  class="country_code" id="country_code" />
                   <input class="validate validateFormNumber" id="number" type="number" placeholder="Enter ur phone number"/>
                 </div>
                
